--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,3 @@
-@import './Page.css/Page.css';
-@import './Mode.css/Mode.css';
-@import './Bouton.css/Button.css';
+/* @import "./Page.css/Page.css";
+@import "./AffichageGeneral/Affichage.css";
+@import "./Mode.css/Mode.css"; */
