--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -6,17 +6,24 @@
     flex-direction: column;
     margin-top: 20px;
     border: 1px solid black;
-    height: auto;
 }
 
 .mode-selection {
-    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-    border: 1px solid black;
-    padding: 10px;
+    z-index: 9999;
+    /* Mettre au premier plan */
+    display: none;
+    /* Caché par défaut */
 }
+
 
 .mode-radio:checked+.mode-label {
     background-color: #007BFF;
@@ -30,7 +37,6 @@
 
 .mode-label {
     margin-right: 10px;
-    margin-bottom: 0;
     font-size: 20px;
     font-weight: bold;
     color: black;
@@ -51,30 +57,27 @@
     content: " ✔️";
 }
 
-/* Styles pour les écrans plus petits */
-@media (max-width: 768px) {
-    .mode-selection {
-        flex-direction: column;
-    }
-
-    .mode-label {
-        margin-right: 0;
-        margin-bottom: 0px;
-    }
+.menu-button {
+    display: none;
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+    font-size: 18px;
 }
 
-
+/* Styles pour les écrans plus petits */
 @media (max-width: 768px) {
-    .mode-container {
-        height: auto;
-        width: 100%;
-        border: none;
+    .menu-button {
+        display: block;
     }
 
     .mode-selection {
+        display: none;
         flex-direction: column;
         align-items: stretch;
-        height: auto;
+        padding: 5px;
         width: 100%;
     }
 
@@ -82,6 +85,12 @@
         margin-right: 0;
         margin-bottom: 10px;
         text-align: center;
+        font-size: 15px;
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+    }
 
+    .mode-label:last-child {
+        border-bottom: none;
     }
 }
