--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: black;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -87,6 +87,7 @@
         text-align: center;
         font-size: 15px;
         padding: 10px;
+        color: white;
         border-bottom: 1px solid #ccc;
     }
 
