--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -3,25 +3,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     margin-top: 20px;
     border: 1px solid black;
 }
 
 .mode-selection {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    /* Mettre au premier plan */
-    display: none;
-    /* Caché par défaut */
+    width: auto;
+    height: auto;
+    border: 2px solid red;
 }
 
 
@@ -57,6 +46,8 @@
     content: " ✔️";
 }
 
+
+/* Mode pour le button */
 .menu-button {
     display: none;
     background-color: #007BFF;
@@ -67,18 +58,37 @@
     font-size: 18px;
 }
 
+.menu-button-checkbox {
+    display: none;
+}
+
 /* Styles pour les écrans plus petits */
 @media (max-width: 768px) {
+    .menu-button-checkbox:checked~.mode-selection {
+        display: flex;
+    }
+
     .menu-button {
         display: block;
     }
 
     .mode-selection {
         display: none;
-        flex-direction: column;
-        align-items: stretch;
-        padding: 5px;
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        background-color: black;
+
+    }
+
+    .mode-radio {
+        display: none;
     }
 
     .mode-label {
