--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -2,9 +2,7 @@
 .mode-container {
     display: flex;
     justify-content: space-between;
-    /* alignement des éléments */
     align-items: center;
-    /* centrage vertical */
     margin-top: 20px;
     padding: 10px;
     border: 1px solid black;
@@ -79,6 +77,12 @@
 
 /* Styles pour les écrans plus petits */
 @media (max-width: 768px) {
+
+
+    .mode-container {
+        border: none;
+    }
+
     .menu-button-checkbox:checked~.mode-selection {
         display: flex;
     }
@@ -94,6 +98,8 @@
         left: 0;
         width: 100%;
         height: 100%;
+        margin: auto;
+        padding: auto;
         flex-direction: column;
         justify-content: center;
         align-items: center;
