--- a/CSS/AffichageGeneral/Affichage.css
+++ b/CSS/AffichageGeneral/Affichage.css
@@ -6,6 +6,20 @@
     font-size: 30px;
 }
 
+/* affichage general */
+
+.trading-title {
+    text-align: center;
+}
+
+.trading-container {
+    margin-top: 20px;
+    border: 3px solid black;
+    border-radius: 8px;
+    height: 100%;
+
+}
+
 .test {
     display: flex;
     flex-wrap: wrap;
@@ -15,16 +29,64 @@
 
 .left-column-trading-left-column,
 .right-column-trading-results-section {
-    width: 50%;
+    width: calc(50% - 10px);
+    min-height: 100%;
     box-sizing: border-box;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .left-column-trading-left-column {
-    border: 1px solid red;
+    border: 2px solid #ccc;
+    border-radius: 8px;
 }
 
 .right-column-trading-results-section {
-    border: 1px solid blue;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+}
+
+
+/* button */
+
+.Button-Trading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.trading-button,
+.button.is-large {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.trading-button {
+    background-color: #007bff;
+    color: white;
+}
+
+.button.is-large {
+    background-color: #f1f1f1;
+    color: #333;
+}
+
+/* Pour un effet au survol */
+.trading-button:hover,
+.button.is-large:hover {
+    background-color: #0056b3;
+    /* une teinte plus foncée pour le bouton bleu */
+}
+
+.button.is-large:hover {
+    background-color: #ccc;
+    /* une teinte plus foncée pour le bouton gris */
 }
 
 
@@ -46,7 +108,6 @@
         .left-column-trading-left-column,
         .right-column-trading-results-section {
             min-width: 100%;
-            /* Prend toute la largeur */
         }
     }
 }
