--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -6,6 +6,7 @@
     margin-top: 20px;
     padding: 10px;
     border: 1px solid black;
+    border-radius: 8px;
 }
 
 .mode-selection {
@@ -92,6 +93,7 @@
 .menu-button-checkbox {
     display: none;
 }
+
 
 
 /* 
