--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,4 @@
 @import "./Page.css/Page.css";
 @import "./Mode.css/Mode.css";
 @import "./AffichageGeneral/Affichage.css";
+@import "./Label.css/label.css";
