--- a/CSS/AffichageGeneral/Affichage.css
+++ b/CSS/AffichageGeneral/Affichage.css
@@ -15,10 +15,10 @@
     margin-top: 20px;
     border: 3px solid black;
     border-radius: 8px;
-    height: 100%;
+    height: 100vh;
 }
 
-.test {
+.PartieTotalTradingMode {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -28,7 +28,7 @@
 .left-column-trading-left-column,
 .right-column-trading-results-section {
     width: calc(50% - 10px);
-    min-height: 100%;
+    min-height: 80vh;
     box-sizing: border-box;
     margin-right: 5px;
     margin-left: 5px;
@@ -44,23 +44,41 @@
     border-radius: 8px;
 }
 
-/* button */
+
+/* 
+##############################################################
+##                                                          ##
+##                      BUTTON                              ##
+##                                                          ##
+##############################################################
+*/
+
+
 .Button-Trading {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
-    gap: 10px;
+    margin-top: 10px;
+    size: 10px;
 }
 
 .trading-button,
 .button.is-large {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
+    size: 10px;
+    font-size: 20px;
+    border: solid 3px black;
     border-radius: 5px;
     cursor: pointer;
 }
+
+
+/* 
+##############################################################
+##                                                          ##
+##                      RESPONSIVE                          ##
+##                                                          ##
+##############################################################
+*/
 
 @media (max-width: 768px) {
 
