--- a/CSS/AffichageGeneral/Affichage.css
+++ b/CSS/AffichageGeneral/Affichage.css
@@ -1,114 +1,57 @@
-/* titre principaux */
-.trading-title,
-.staking-title,
-.nft-title,
-.pret-emprunt-title {
-    font-size: 30px;
-}
+/* Styles par défaut pour grands écrans */
 
-/* affichage general */
-.trading-title {
-    text-align: center;
-}
-
-.trading-container {
-    margin-top: 20px;
-    border: 3px solid black;
+.AffichageSuperieur {
+    border: solid 1px black;
     border-radius: 8px;
-    height: 100vh;
-}
-
-.PartieTotalTradingMode {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
-}
-
-.left-column-trading-left-column,
-.right-column-trading-results-section {
-    width: calc(50% - 10px);
-    min-height: 80vh;
     box-sizing: border-box;
-    margin-right: 5px;
-    margin-left: 5px;
 }
 
-.left-column-trading-left-column {
-    border: 2px solid #ccc;
-    border-radius: 8px;
+.AffichageTitre {
+    text-align: center;
+    margin: 0px 80px 0 15px;
+    font-size: 18px;
 }
 
-.right-column-trading-results-section {
-    border: 2px solid #ccc;
-    border-radius: 8px;
-}
-
-
-/* 
-##############################################################
-##                                                          ##
-##                      BUTTON                              ##
-##                                                          ##
-##############################################################
-*/
-
-
-.Button-Trading {
+.AffichageGauche,
+.AffichageDroite {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
-    margin-top: 10px;
-    size: 10px;
+    justify-content: center;
 }
 
-.trading-button,
-.button.is-large {
-    size: 10px;
-    font-size: 20px;
-    border: solid 3px black;
-    border-radius: 5px;
-    cursor: pointer;
+.AffichageDeuxButton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
-
-/* 
-##############################################################
-##                                                          ##
-##                      RESPONSIVE                          ##
-##                                                          ##
-##############################################################
-*/
+/* Styles pour les écrans plus petits (jusqu'à 768px) */
 
 @media (max-width: 768px) {
 
-    .trading-title,
-    .staking-title,
-    .nft-title,
-    .pret-emprunt-title {
+    .AffichageSuperieur {
+        width: 100%;
+        height: 100%;
+    }
+
+    .AffichageTitre {
+        text-align: center;
         font-size: 14px;
-        /* Diminue la taille de la police */
+        margin: 0px 30px 0 30px;
     }
 
-    .trading-container {
-        height: auto;
-
+    .AffichageGauche,
+    .AffichageDroite {
+        flex-direction: column;
+        padding: 10px;
     }
 
-    .Button-Trading {
-        display: flex;
-        justify-content: space-around;
+    .AffichageDeuxButton {
+        flex-direction: column;
         align-items: center;
-        margin-bottom: 50px;
-        size: 10px;
-    }
-
-    .trading-button,
-    .button.is-large {
-        size: 10px;
-        font-size: 20px;
-        border: solid 3px black;
-        border-radius: 5px;
-        cursor: pointer;
+        justify-content: center;
+        padding: 10px;
     }
 }
