--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -1,13 +1,16 @@
 /* Styles par défaut pour les grands écrans */
 .mode-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
     margin-top: 20px;
-    padding: 10px;
     border: 1px solid black;
-    border-radius: 8px;
+    border-radius: 12px;
+    background-color: whitesmoke;
+    width: 65%;
 }
+
 
 .mode-selection {
     display: flex;
@@ -23,14 +26,15 @@
     color: blue;
     font-size: 30px;
     position: relative;
-    right: -420px;
+    right: -280px;
+    margin-right: 10px;
 }
 
 .medium-icon {
     color: black;
     font-size: 30px;
     position: relative;
-    right: -330px;
+    right: -280px;
 }
 
 
