--- a/CSS/Mode.css/Mode.css
+++ b/CSS/Mode.css/Mode.css
@@ -148,33 +148,24 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 75%;
     }
 
     .menu-button {
         display: block;
         background-color: #3498db;
-        /* Bleu */
         color: white;
-        /* Texte en blanc */
-        margin-left: auto;
-        padding: 10px 20px;
-        /* Espacement interne */
+        margin-left: -28px;
+        padding: 8px 15px;
         border: none;
-        /* Pas de bordure */
-        border-radius: 4px;
-        /* Coins arrondis */
+        border-radius: 14px;
         font-size: 16px;
-        /* Taille du texte */
         cursor: pointer;
-        /* Curseur en forme de main */
         transition: background-color 0.3s ease;
-        /* Animation */
     }
 
-    /* Au survol du bouton */
     .menu-button:hover {
         background-color: #2980b9;
-        /* Un bleu un peu plus foncé */
     }
 
 
@@ -183,7 +174,8 @@
         font-size: 25px;
         margin-right: auto;
         position: relative;
-        right: -220px;
+        right: -25px;
+        margin-top: 5px;
     }
 
     .medium-icon-menu {
@@ -191,7 +183,8 @@
         font-size: 25px;
         margin-right: auto;
         position: relative;
-        right: -150px;
+        right: -18px;
+        margin-top: 5px;
     }
 
     .menu-button-checkbox:checked~.mode-selection {
@@ -204,9 +197,8 @@
 
     .mode-label {
         margin-right: 0;
-        margin-bottom: 10px;
-        text-align: center;
-        font-size: 15px;
+        margin-bottom: 35px;
+        font-size: 18px;
         padding: 10px;
         color: white;
         border-bottom: 1px solid #ccc;
