--- a/CSS/AffichageGeneral/Affichage.css
+++ b/CSS/AffichageGeneral/Affichage.css
@@ -6,6 +6,8 @@
     margin-top: 25px;
     background-color: whitesmoke;
     min-width: 65%;
+    border: solid 1px black;
+
 }
 
 .AffichageTitre {
@@ -42,6 +44,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin: 0 0 10px 0;
 }
 
 .ButtonAffichageSousResult:hover,
@@ -57,6 +60,8 @@
     .AffichageSuperieur {
         width: 100%;
         height: 100%;
+
+
     }
 
     .AffichageTitre {
