--- a/CSS/Label.css/label.css
+++ b/CSS/Label.css/label.css
@@ -1,9 +1,21 @@
+.lever-option {
+    align-items: center;
+    margin: 0 200px 0 200px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+
 .trading-form {
     align-items: center;
-    margin: 10px 5px 0 5px;
-    border-radius: 8px;
-
+    margin: 0 350px 0 350px;
+    display: flex;
+    justify-content: space-evenly;
 }
+
+
+
 
 .trading-choice,
 .lever-choice,
@@ -22,17 +34,32 @@
     padding: 5px;
     display: flex;
     justify-content: space-around;
+
 }
 
 .trading-label,
-.lever-label {
+.lever-label,
+.trading-labe,
+.lever-label1 {
     display: flex;
     align-items: center;
     font-size: 20px;
+
 }
 
-.trading-radio {
-    margin-right: 10px;
+.trading-label {
+    margin: 0 70px 0 0;
+    display: flex;
+    flex-direction: row-reverse;
+
+}
+
+.trading-labe {
+    margin: 0 0 0 70px;
+}
+
+.trading-radio,
+.lever-radio {
     height: 15px;
     width: 15px;
 }
@@ -41,25 +68,25 @@
 
 .block_levier {
     align-items: center;
-    margin: 20px 5px 0 5px;
+    margin: 0 20px 0 5px;
     border-radius: 8px;
-
-
-
 }
 
-.lever-option {
-    align-items: center;
-    margin: 0 150px 0 150px;
+.lever-label {
+    flex-direction: row-reverse;
     display: flex;
-    justify-content: space-evenly;
+    margin: 0 0 0 20px;
 }
 
-.lever-radio {
-    margin-right: 10px;
-    height: 15px;
-    width: 15px;
+.lever-label1 {
+    margin: 0 20px 0 0;
 }
+
+
+
+
+
+
 
 /* levier range */
 
@@ -88,6 +115,10 @@
 .lever-button {
     justify-content: space-around;
     font-size: 20px;
+    width: 150px;
+    margin: 0 10px 0 10px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 
