update Affichage.css, CSS/index.css and index.html

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,3 +2,4 @@
 @import "./Mode.css/Mode.css";
 @import "./AffichageGeneral/Affichage.css";
 @import "./Label.css/label.css";
+@import "./Label.css/Staking.css";
