--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,3 +3,4 @@
 @import "./AffichageGeneral/Affichage.css";
 @import "./Label.css/label.css";
 @import "./Label.css/Staking.css";
+@import "./Label.css/NFT.css";
