update CSS/index.css, Lending.js, LendingReset.js and index.html

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,3 +4,4 @@
 @import "./Label.css/label.css";
 @import "./Label.css/Staking.css";
 @import "./Label.css/NFT.css";
+@import "./Label.css/Lending.css";
