update Affichage.css, label.css, Mode.css and CSS/index.css

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,3 +5,4 @@
 @import "./Label.css/Staking.css";
 @import "./Label.css/NFT.css";
 @import "./Label.css/Lending.css";
+@import "./Responsive/Responsive.css";
