--- a/CSS/Composent/Composent.css
+++ b/CSS/Composent/Composent.css
@@ -21,7 +21,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 10vh;
+        height: auto;
     }
 
     .Composent_Trading_Button {
@@ -43,4 +43,12 @@
         font-size: 20px;
     }
 
+    .Composent_Input_ClassBOX {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-top: 20px;
+        height: auto;
+    }
 }
