--- a/CSS/Composent/Composent.css
+++ b/CSS/Composent/Composent.css
@@ -16,7 +16,6 @@
     }
 
     .Composoent_LevierButton {
-
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -27,13 +26,30 @@
     .Composent_Trading_Button {
         margin-bottom: 20px;
         display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .Composent_Staking_Button {
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        width: 85%;
     }
 
     .Composent_TradingButton_Selection {
         font-size: 15px;
         padding: 0 20px 0 20px;
+        flex-grow: 1;
+        max-width: calc(100% / 4);
     }
 
+    .Composent_TradingButton_Selection_Staking {
+        font-size: 14px;
+        margin: 0px 9px 0px 5px;
+        flex-grow: 1;
+        max-width: calc(100% / 4);
+    }
 
     .Composent_Tranding_Range_General {
         text-align: center;
@@ -46,6 +62,7 @@
         margin: 0 auto;
         display: block;
     }
+
 
 
     .Composent_Input_ClassBOX {
