--- a/CSS/Composent/Composent.css
+++ b/CSS/Composent/Composent.css
@@ -1,19 +1,44 @@
 @media screen and (max-width: 500px) {
-    .Composent_Generaux_Radio {
+    .Radio_Wrapper {
+        display: flex;
+        flex-direction: column;
         align-items: center;
+    }
+
+    .Composent_Generaux_Radio {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: red;
+        width: 100%;
     }
 
     .Composent_SpotLevier_Radio {
+        display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        background-color: green;
+        height: auto;
+        width: 100%;
     }
 
-    .Composent_Generaux_Text,
-    .Radio {
+    .Composent_Generaux_Text {
         font-size: 0.9rem;
         margin: 8px;
+        min-width: 80px;
     }
+
+
+
+
+
+
+
+
+
+
+
 
     .Composoent_LevierButton {
         display: flex;
